gl33-master/src/test/deca/context/valid/others/equalClasses.deca
class Hello {}

{
    Hello a = new Hello();
    Hello b = new Hello();
    if (a.equals(b)) {
        println("no");
    }
    if (a != b) {
        println("yes");
    }
}