gl33-master/src/test/deca/context/invalid/other/ifthenelse_fausse_float.deca
// Invalid
// ifthenelse fausse (float comme entree)

{
    float x= 2.5;

    if(x){
        println("non");
    }

}
